# Janus_CryptoBOM

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  JOURNAL.md  JanusCryptoBOM.msbuild.proj  Makefile  ONBOARDING.md  README-1.md  README.md  SECURITY.md  SUPPORT.md  VERSION.env  build-windows.ps1  build.bat  docker-compose.yml  janus-agent.toml
HSM/: init-token.go
agent/: Cargo.toml  Dockerfile  janus-agent.example.toml  janus-agent.linux.toml
agent/src/: comms.rs  config.rs  evidence.rs  host.rs  interceptor.rs  main.rs  mutation.rs  policy.rs  prompts.rs  proto.rs  report.rs  storage.rs  version.rs
agent/src/discovery/: binary.rs  cbom.rs  config_parse.rs  dependency.rs  mod.rs  network.rs  plugin.rs  runtime.rs  sidechannel.rs  source.rs  status.rs  windows.rs
config/: janus-agent.compose.toml
doc/: crypto-analyzer-benchmark-and-solution.md  next-gen-pqc-migration-platform-blueprint.md
docs/: AGILITY_SCORECARD.md  ALGORITHM_COMPATIBILITY.md  CAPABILITY_MATURITY.md  COMPLETION_MATRIX.md  INTEROP_LAB.md  LLM_CAPABILITY_CONTRACT.md  NETWORK_ASSESSMENT.md  OPERATIONS.md  PRIVACY_DATA_GOVERNANCE.md  THREAT_MODEL.md  WAVE_PLANNING_GUIDE.md  agent-fleet-contract.md  case_studies.md  competitive-analysis.md  deployment.md  design.md  feature-inventory.md  linux-root-prerequisites.md  linux-support.md  sample-agent-report.html  sample-agent.sarif  versioning-and-packaging.md
infra/: docker-compose.yml  janus-agent.compose.toml
policies/: cnsa-2.0.yaml  custom.yaml  nist-pqc-2026.yaml
proto/: janus.descriptor.sha256  janus.proto
server/: go.mod  (+2 more)
(+237 files in other folders)
