[package]
name = "janus-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "janus_interceptor"
crate-type = ["cdylib"]
path = "src/interceptor.rs"

[[bin]]
name = "janus-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
diffy = "0.4"
hex = "0.4"
hmac = "0.12"
subtle = "2.6"
hostname = "0.4"
prost = "0.13"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
object = { version = "0.32", default-features = false, features = ["read_core", "elf", "pe", "macho"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.33"
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tonic = { version = "0.12", features = ["transport", "tls"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"
windows-sys = { version = "0.59", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_JobObjects",
] }

